--- a/packages/client/src/ui/styles/variables.css
+++ b/packages/client/src/ui/styles/variables.css
@@ -62,6 +62,7 @@
   --z-base: 1;
   --z-footer: 50;
   --z-dropdown: 100;
+  --z-banner: 500;
   --z-modal: 1000;
   --z-toast: 2000;
 }
